--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -959,7 +959,7 @@ body {
   padding: 0.3em 1em;
   left: 50%;
   transform: translate(-50%, -20%);
-  bottom: 10%;
+  bottom: 15%;
   transition: 0.5s ease;
   pointer-events: none;
   user-select: none;
@@ -1176,6 +1176,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  opacity: 0;
+  animation: delayVisible 0.3s 0.2s ease forwards;
 }
 .goal-count-container {
   position: relative;
@@ -1259,6 +1261,8 @@ body {
   transform: translateY(50%);
   height: 2px;
   background: var(--courtBorderColor);
+  opacity: 0;
+  animation: randomVisible 0.5s 0.2s ease-in forwards;
 }
 .football-court-goal-post-top {
   position: absolute;
@@ -1269,6 +1273,8 @@ body {
   top: 0;
   transform: translateX(-50%);
   border-top: none;
+  opacity: 0;
+  animation: randomVisible 1s ease-in forwards;
 }
 .football-court-goal-post-top::after {
   position: absolute;
@@ -1280,6 +1286,8 @@ body {
   left: 50%;
   border-top: none;
   transform: translateX(-50%);
+  opacity: 0;
+  animation: randomVisible 0.5s 0.5s ease-in forwards;
 }
 .football-court-goal-post-top::before {
   position: absolute;
@@ -1293,6 +1301,8 @@ body {
   left: 50%;
   bottom: -80%;
   transform: translate(-50%, -50%) rotate(-45deg);
+  opacity: 0;
+  animation: randomVisible 0.5s 0.2s ease-in forwards;
 }
 .football-court-goal-post-bottom {
   position: absolute;
@@ -1303,6 +1313,8 @@ body {
   bottom: 0%;
   transform: translateX(-50%);
   border-bottom: none;
+  opacity: 0;
+  animation: randomVisible 0.5s 0.5s ease-in forwards;
 }
 .football-court-goal-post-bottom::after {
   position: absolute;
@@ -1314,6 +1326,8 @@ body {
   left: 50%;
   border-bottom: none;
   transform: translateX(-50%);
+  opacity: 0;
+  animation: randomVisible 0.5s 0.2s ease-in forwards;
 }
 .football-court-goal-post-bottom::before {
   position: absolute;
@@ -1327,6 +1341,8 @@ body {
   left: 50%;
   top: -80%;
   transform: translate(-50%, 50%) rotate(-45deg);
+  opacity: 0;
+  animation: randomVisible 0.5s 0.2s ease-in forwards;
 }
 .football-court-middle-circle {
   position: absolute;
@@ -1412,6 +1428,19 @@ body {
     -2px -2px 5px rgb(92, 92, 92) inset;
   border-radius: 0.5em;
   border: none;
+  transition: 0.3s ease;
+}
+.football-court-goal-trigger-button:active {
+  background: linear-gradient(-135deg, rgb(236, 236, 236), rgb(107, 107, 107));
+  box-shadow: 0 0 0 3px rgba(17, 100, 54, 0.801),
+    -2px -2px 5px rgb(236, 236, 236) inset, 2px 2px 5px rgb(92, 92, 92) inset;
+}
+.football-court-goal-trigger-button:active
+  > .football-court-goal-trigger-button-icon {
+  filter: drop-shadow(5px 15px 5px rgb(236, 235, 224))
+    drop-shadow(-5px -10px 5px rgba(29, 29, 29, 0.5));
+  width: 40%;
+  height: 40%;
 }
 .football-court-goal-trigger-button-icon {
   width: 50%;
@@ -1419,6 +1448,7 @@ body {
   color: #222222;
   filter: drop-shadow(-5px -15px 5px rgb(236, 235, 224))
     drop-shadow(5px 10px 5px rgba(29, 29, 29, 0.5));
+  transition: 0.3s ease;
 }
 .football-court-goal-state-change-buttons {
   border: none;
@@ -1426,6 +1456,20 @@ body {
   box-shadow: 1px 1px 3px rgb(83, 83, 83) inset,
     -1px -1px 3px rgb(22, 22, 22) inset;
   border-radius: 0.5em;
+  transition: 0.3s ease;
+}
+.football-court-goal-state-change-buttons:active {
+  background: linear-gradient(-135deg, rgb(83, 83, 83), rgb(48, 47, 47));
+  box-shadow: -1px -1px 3px rgb(83, 83, 83) inset,
+    1px 1px 3px rgb(22, 22, 22) inset;
+}
+.football-court-goal-state-change-buttons:active
+  > .football-court-goal-button-icon {
+  filter: drop-shadow(5px 10px 5px rgb(100, 100, 100))
+    drop-shadow(-10px -10px 5px rgba(29, 29, 29, 0.5));
+  color: #eaeff3;
+  width: 50%;
+  height: 50%;
 }
 .football-court-goal-button-icon {
   color: rgb(160, 160, 160);
@@ -1433,18 +1477,21 @@ body {
   height: 60%;
   filter: drop-shadow(-5px -10px 5px rgb(100, 100, 100))
     drop-shadow(10px 10px 5px rgba(29, 29, 29, 0.5));
+  transition: all 0.3s ease;
 }
 .football-court-goal-text {
   position: relative;
+  font-family: "Exo", sans-serif;
   width: 100%;
   height: inherit;
-  background: linear-gradient(135deg, rgb(221, 221, 221), rgb(213, 219, 216));
+  background: linear-gradient(135deg, rgb(39, 39, 39), rgb(61, 61, 61));
   border-radius: 0.1em;
   display: grid;
   place-items: center;
   font-weight: bolder;
   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.753),
-    -5px -5px 15px rgb(255, 255, 255);
+    -5px -5px 15px rgb(255, 255, 255), 0 0 5px #fff;
+  color: #fff;
 }
 .football-court-football-container {
   position: absolute;
@@ -1469,16 +1516,16 @@ body {
   }
 }
 .football-ani1 {
-    animation: football-ani1 1s linear;
+  animation: football-ani1 1s linear forwards;
 }
 .football-ani2 {
-    animation: football-ani2 1s 1s ease-in-out;
+  animation: football-ani2 2s ease-in-out forwards;
 }
 .football-ani3 {
-    animation: football-ani3 1s 0.5s ease-in-out;
+  animation: football-ani3 2s ease-in-out forwards;
 }
 .football-ani4 {
-    animation: football-ani4 1s 0.5s ease-out;
+  animation: football-ani4 3s ease-out forwards;
 }
 @keyframes football-ani1 {
   0% {
@@ -1508,53 +1555,296 @@ body {
   0% {
     bottom: 1em;
     left: 70%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scale(0.5);
     filter: drop-shadow(0 5px 10px black);
   }
   50% {
     filter: drop-shadow(25px 25px 5px black);
     left: 20%;
+    transform: scale(1) translateX(-50%);
   }
-  100% {
+  99.99% {
     bottom: 100%;
     left: 50%;
     transform: translateX(-50%);
     filter: drop-shadow(0 5px 5px black);
+    display: block;
+  }
+  100% {
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%) scale(0.8);
+    filter: drop-shadow(0 5px 5px black);
+    display: none;
   }
 }
 @keyframes football-ani3 {
   0% {
     bottom: 1em;
     left: 20%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scale(0.5);
     filter: drop-shadow(0 5px 10px black);
   }
   50% {
     filter: drop-shadow(25px 25px 5px black);
     left: 70%;
+    transform: translateX(-50%) scale(1);
   }
-  100% {
+  99.99% {
     bottom: 100%;
     left: 50%;
     transform: translateX(-50%);
     filter: drop-shadow(0 5px 5px black);
+    display: block;
+  }
+  100% {
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%) scale(0.8);
+    filter: drop-shadow(0 5px 5px black);
+    display: none;
   }
 }
 @keyframes football-ani4 {
   0% {
     bottom: 1em;
     left: 20%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scale(0.5);
     filter: drop-shadow(0 5px 10px black);
   }
-  80% {
+  50% {
     filter: drop-shadow(25px 25px 5px black);
-    left: 70%;
+    transform: translateX(-50%) scale(1);
+    left: 50%;
   }
-  100% {
+  99.99% {
     bottom: 100%;
-    left: 60%;
     transform: translateX(-50%);
     filter: drop-shadow(0 5px 5px black);
+    display: block;
   }
+  100% {
+    bottom: 110%;
+    left: 60%;
+    transform: translateX(-50%) scale(0.8);
+    filter: drop-shadow(0 5px 5px black);
+    display: none;
+  }
+}
+.football-court-dig-ground {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  background: rgb(31, 31, 31);
+  box-shadow: 0 0 0 2px rgba(87, 87, 87, 0.815);
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  border-radius: 0.5em;
+}
+.football-court-selectedTeamImage {
+  position: relative;
+  margin: 0 auto;
+  width: 80%;
+  height: 20vh;
+  object-fit: contain;
+}
+.football-court-dig-selectedTeamName {
+  position: relative;
+  font-size: 1rem;
+  color: var(--offWhite);
+  font-weight: 800;
+  font-style: italic;
+  text-align: center;
+}
+.football-court-dig-team-info-container {
+  position: relative;
+  display: grid;
+  grid-auto-flow: column;
+  margin: 0 auto;
+  width: 90%;
+  top: 1em;
+  padding: 0.5em;
+  background: rgb(37, 37, 37);
+  border-radius: 0.2em;
+  box-shadow: 0 10px 20px rgb(8, 8, 8), 0 -1px 0 1px rgb(46, 46, 46);
+  overflow: hidden;
+  animation: votingContainer 0.8s forwards ease-out;
+}
+.football-court-dig-team-info-container::after {
+  position: absolute;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(
+    to left,
+    transparent 30%,
+    rgba(255, 255, 255, 0.068)
+  );
+  transform: translateX(90%) skew(45deg) rotate(90deg);
+  animation: glassAnimationFootballTeamDetails 0.8s ease-in-out forwards;
+}
+@keyframes glassAnimationFootballTeamDetails {
+  from {
+    transform: translateX(90%) skew(15deg) rotate(90deg);
+  }
+  to {
+    transform: translateX(-20%) skew(45deg) rotate(90deg);
+  }
+}
+.football-court-dig-team-info-container::before {
+  position: absolute;
+  content: "";
+  width: 50%;
+  height: 90%;
+  background: linear-gradient(
+    to left,
+    transparent 30%,
+    rgba(255, 255, 255, 0.164)
+  );
+  transform: translateX(90%) skew(45deg) rotate(90deg);
+  animation: glassAnimationFootballTeamDetails2 0.8s ease-in-out forwards;
+}
+@keyframes glassAnimationFootballTeamDetails2 {
+  from {
+    transform: translateX(90%) skew(25deg) rotate(90deg);
+  }
+  to {
+    transform: translateX(-40%) skew(45deg) rotate(90deg);
+  }
+}
+.football-court-dig-team-info-data {
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 0.5em;
+  width: 100%;
+  height: 100%;
+}
+.football-court-dig-team-info-title {
+  font-size: 0.6rem;
+  color: var(--offWhite);
+  font-weight: 400;
+}
+.football-court-dig-team-info-title-data {
+  font-size: 1.2rem;
+  color: var(--midWhite);
+  font-weight: 700;
+  font-family: "Exo", sans-serif;
+}
+@keyframes randomVisible {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 0;
+  }
+  32% {
+    opacity: 1;
+  }
+  37% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 1;
+  }
+  65% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes delayVisible {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.football-court-dig-instruction-text {
+  position: relative;
+  font-size: 0.7rem;
+  color: var(--offWhite);
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  font-weight: 400;
+  padding-bottom: 1em;
+}
+.match-win-main-container {
+  position: relative;
+  width: 80%;
+  height: 0.5em;
+  border-radius: 99vh;
+  background: rgb(0, 132, 255);
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.726), 0 0 0 5px rgb(15, 15, 15);
+}
+.match-win-draw-per,
+.match-win-win-per,
+.match-win-loss-per {
+  position: relative;
+  box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.223) inset;
+  height: 100%;
+  transform: skew(20deg);
+}
+.match-win-win-per {
+  width: 60%;
+  background: rgb(0, 162, 255);
+}
+.match-win-loss-per {
+  width: 20%;
+  background: rgb(219, 9, 9);
+}
+.match-win-draw-per {
+  width: 20%;
+  background: rgb(172, 172, 172);
+}
+.football-court-team-flag {
+  position: absolute;
+  width: 90%;
+  height: 90%;
+  object-fit: contain;
+  filter: grayscale(110%) opacity(0.03);
+  mix-blend-mode:luminosity;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
