--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -323,6 +323,7 @@ body {
   padding-top: 1em;
 }
 .times {
+  font-family: "Exo";
   font-weight: bold;
   font-size: 1rem;
   background: linear-gradient(#fff, transparent);
@@ -1292,15 +1293,15 @@ body {
 .football-court-goal-post-top::before {
   position: absolute;
   content: "";
-  width: 30%;
-  height: 75%;
+  width: 5rem;
+  height: 5rem;
   border: 2px solid var(--courtBorderColor);
   border-top: 2px solid transparent;
   border-right: 2px solid transparent;
   border-radius: 99vh;
   left: 50%;
-  bottom: -80%;
-  transform: translate(-50%, -50%) rotate(-45deg);
+  bottom: 0%;
+  transform: translate(-50%, 50%) rotate(-45deg);
   opacity: 0;
   animation: randomVisible 0.5s 0.2s ease-in forwards;
 }
@@ -1332,15 +1333,15 @@ body {
 .football-court-goal-post-bottom::before {
   position: absolute;
   content: "";
-  width: 30%;
-  height: 75%;
+  width: 5rem;
+  height: 5rem;
   border: 2px solid var(--courtBorderColor);
   border-bottom: 2px solid transparent;
   border-left: 2px solid transparent;
   border-radius: 99vh;
   left: 50%;
-  top: -80%;
-  transform: translate(-50%, 50%) rotate(-45deg);
+  top: 0%;
+  transform: translate(-50%, -50%) rotate(-45deg);
   opacity: 0;
   animation: randomVisible 0.5s 0.2s ease-in forwards;
 }
@@ -1810,7 +1811,6 @@ body {
   width: 80%;
   height: 0.5em;
   border-radius: 99vh;
-  background: rgb(0, 132, 255);
   margin: 0 auto;
   display: flex;
   flex-wrap: nowrap;
@@ -1827,15 +1827,15 @@ body {
 }
 .match-win-win-per {
   width: 60%;
-  background: rgb(0, 162, 255);
+  background: rgba(152, 217, 255, 0.8);
 }
 .match-win-loss-per {
   width: 20%;
-  background: rgb(219, 9, 9);
+  background: rgba(117, 142, 151, 0.8);
 }
 .match-win-draw-per {
   width: 20%;
-  background: rgb(172, 172, 172);
+  background: rgba(172, 172, 172, 0.8);
 }
 .football-court-team-flag {
   position: absolute;
@@ -1843,8 +1843,16 @@ body {
   height: 90%;
   object-fit: contain;
   filter: grayscale(110%) opacity(0.03);
-  mix-blend-mode:luminosity;
+  mix-blend-mode: luminosity;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+.profile-menu-tab-main-container {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0.5em;
+  background: var(--bettingBackground);
+  border-radius: 0.5rem;
 }
