--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1086,6 +1086,7 @@ body {
 .userProfileName {
   color: var(--offWhite);
   padding-top: 1em;
+  text-transform: capitalize;
 }
 .userProfileId {
   color: rgba(255, 255, 255, 0.2);
@@ -1233,6 +1234,7 @@ body {
   gap: 1em;
   flex-direction: column;
   border-top: 5px solid rgba(109, 118, 131, 0.144);
+  transition: 0.2s ease;
 }
 .goal-count-grid {
   position: relative;
@@ -2121,4 +2123,62 @@ body {
   position: relative;
   padding: 0.5em;
   width: 100%;
+}
+.blink1 {
+  position: relative;
+  width: 1.5em;
+  height: 1.5em;
+  color: #fff;
+  animation: football-ani 1s infinite linear;
+  animation: blinks 1s reverse linear forwards;
+}
+@keyframes blinks {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 0;
+  }
+  32% {
+    opacity: 1;
+  }
+  37% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  55% {
+    opacity: 1;
+  }
+  65% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
