--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -2236,7 +2236,7 @@ body {
   font-weight: 600;
   font-size: 0.8rem;
   border-radius: 0.5em;
-  text-transform:capitalize;
+  text-transform: capitalize;
   transition: 0.3s ease all;
 }
 .site-input-box-input-label {
@@ -2401,12 +2401,177 @@ body {
 }
 .form-main-title {
   position: relative;
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 100%;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.5em;
-  font-family: 'Exo';
+  font-family: "Exo";
+}
+.schedule-form-team-main-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  gap: 1em;
+  width: 100%;
+  padding: 0.5em;
+}
+.schedule-form-team-sub-containers {
+  background: #23272b;
+  border-radius: 0.5em;
+  animation: blinkingBackground 3s ease alternate infinite;
+}
+@keyframes blinkingBackground {
+  from {
+    background: #23272bc8;
+  }
+  to {
+    background: #3c4044;
+  }
+}
+.schedule-form-team-sub-containers:nth-child(1) {
+  grid-area: 1 / 1 / 6 / 4;
+}
+.schedule-form-team-sub-containers:nth-child(2) {
+  grid-area: 3 / 4 / 4 / 6;
+  display: flex;
+  justify-content: center;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.38);
+  font-style: italic;
+  background: transparent !important;
+}
+.schedule-form-team-sub-containers:nth-child(3) {
+  grid-area: 1 / 6 / 6 / 9;
+}
+.schedule-form-team-sub-containers:nth-child(4) {
+  grid-area: 6 / 1 / 7 / 4;
+}
+.schedule-form-team-sub-containers:nth-child(5) {
+  grid-area: 6 / 6 / 7 / 9;
+}
+.schedule-form-team-sub-containers:nth-child(6) {
+  grid-area: 8 / 3 / 9 / 7;
+}
+.dropDown-main-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.dropDown-content-container {
+  position: relative;
+  width: inherit;
+  border-radius: 0.5em;
+  border: 2px solid rgb(64, 64, 64);
+  padding: 1.2em 1em;
+  color: rgb(255, 255, 255);
+  display: flex;
+  font-size: 0.8rem;
+  align-items: center;
+  gap: 1em;
+  font-weight: 600;
+  transition: 0.3s ease all;
+}
+.dropDown-drop-list {
+  position: absolute;
+  width: 100%;
+  background: linear-gradient(#252525, #2e2e2e);
+  border-radius: 0.5em;
+  transition: 0.3s ease all;
+  top: 110%;
+  z-index: 1001;
+  border: 1px solid rgba(84, 84, 84, 0.572);
+  box-shadow: 0 10px 10px rgba(22, 22, 22, 0.446);
+  animation: dropFromTop 0.2s ease forwards;
+  transform-origin: 50% 0;
+}
+@keyframes dropFromTop {
+  from {
+    transform: translateY(-10%) scaleY(0.5);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0%) scaleY(1);
+    opacity: 1;
+  }
+}
+.dropDown-drop-list > ul {
+  list-style: none;
+  padding: 0.5em;
+  transition: 0.3s ease all;
+}
+/* .dropDown-drop-list > ul > li {
+  position: relative;
+  padding: 1em;
+  color: rgb(181, 181, 181);
+  background: transparent;
+  font-weight: 600;
+  font-size: 0.8rem;
+  border-radius: 0.25em;
+  transition: 0.3s ease all;
+} */
+.dropDown-drop-list > ul > li:hover {
+  color: rgb(222, 222, 222);
+  background: #1895f5;
+}
+.this-listItem-is-selected {
+  color: rgb(255, 255, 255);
+  background: #0e8ae7;
+  position: relative;
+  padding: 1em;
+  font-weight: 600;
+  font-size: 0.8rem;
+  border-radius: 0.25em;
+  transition: 0.3s ease all;
+}
+.listItem-not-yet-selected {
+  position: relative;
+  padding: 1em;
+  color: rgb(181, 181, 181);
+  background: transparent;
+  font-weight: 600;
+  font-size: 0.8rem;
+  border-radius: 0.25em;
+  transition: 0.3s ease all;
+}
+.dropDown-list-icon-down {
+  position: absolute;
+  right: 1em;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 0.3s ease all;
+  color: rgba(255, 255, 255, 0.443);
+}
+.schedule-data-container {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 0.5em;
+  row-gap: 1em;
+}
+.schedule-data-sub-containers {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8em;
+}
+.schedule-data-sub-containers:nth-child(1) {
+  grid-area: 1 / 1 / 2 / 4;
+}
+.schedule-data-sub-containers:nth-child(2) {
+  grid-area: 1 / 4 / 2 / 7;
+}
+.schedule-data-sub-containers:nth-child(3) {
+  grid-area: 2 / 1 / 3 / 7;
+}
+.schedule-data-sub-containers:nth-child(4) {
+  grid-area: 3 / 1 / 4 / 4;
+}
+.schedule-data-sub-containers:nth-child(5) {
+  grid-area: 3 / 4 / 4 / 7;
 }
