--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -16,6 +16,10 @@
   --courtBorderColor: rgba(255, 255, 255, 0.774);
   --bigFontSize: 1.5rem;
 }
+::-webkit-scrollbar {
+  background: rgba(255, 255, 255, 0);
+  display: none;
+}
 
 * {
   margin: 0;
@@ -31,6 +35,7 @@ body {
   width: 100%;
   min-height: 100vh;
   background: var(--backgroundColor2);
+  scroll-behavior: smooth;
 }
 .App {
   position: relative;
@@ -74,6 +79,10 @@ body {
 .navIcons {
   color: var(--iconColor);
   font-size: var(--iconSize);
+  transition: 0.3s all ease;
+}
+.navIcons:active {
+  padding-right: 0.5em;
 }
 .siteTitle {
   color: #fff;
@@ -2649,7 +2658,8 @@ h6 {
   transition: 0.2s ease all;
   backdrop-filter: blur(10px);
   transition: 0.3s all ease;
-  box-shadow: 5px 5px 5px rgb(19, 19, 19) inset, -5px -5px 5px rgb(55, 55, 55) inset;
+  box-shadow: 5px 5px 5px rgb(19, 19, 19) inset,
+    -5px -5px 5px rgb(55, 55, 55) inset;
 }
 .bottom-nav-nav {
   position: relative;
@@ -2747,9 +2757,8 @@ h6 {
   position: relative;
   width: 100%;
   height: 25vh;
-  border-radius: 0.5em;
-  overflow: hidden;
   display: flex;
+  border-radius: 0.5em;
   background: rgb(0, 0, 0);
 }
 .archon-vs-box {
@@ -2760,29 +2769,61 @@ h6 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.9;
+  mix-blend-mode: difference;
+  border-radius: 0.5em;
 }
 .archon-vs-info-container {
   position: absolute;
-  bottom: 8%;
+  bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(50%);
   width: 80%;
   padding: 1em;
   border-radius: 99vh;
-  background-color: #131313;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='400' cy='400' r='58.7%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23131313'/%3E%3Cstop offset='1' stop-color='%23001F21'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='400' cy='400' r='80.7%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23131313'/%3E%3Cstop offset='1' stop-color='%23000404'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='800'/%3E%3Cg fill-opacity='0.6'%3E%3Cpath fill='url(%23b)' d='M998.7 439.2c1.7-26.5 1.7-52.7 0.1-78.5L401 399.9c0 0 0-0.1 0-0.1l587.6-116.9c-5.1-25.9-11.9-51.2-20.3-75.8L400.9 399.7c0 0 0-0.1 0-0.1l537.3-265c-11.6-23.5-24.8-46.2-39.3-67.9L400.8 399.5c0 0 0-0.1-0.1-0.1l450.4-395c-17.3-19.7-35.8-38.2-55.5-55.5l-395 450.4c0 0-0.1 0-0.1-0.1L733.4-99c-21.7-14.5-44.4-27.6-68-39.3l-265 537.4c0 0-0.1 0-0.1 0l192.6-567.4c-24.6-8.3-49.9-15.1-75.8-20.2L400.2 399c0 0-0.1 0-0.1 0l39.2-597.7c-26.5-1.7-52.7-1.7-78.5-0.1L399.9 399c0 0-0.1 0-0.1 0L282.9-188.6c-25.9 5.1-51.2 11.9-75.8 20.3l192.6 567.4c0 0-0.1 0-0.1 0l-265-537.3c-23.5 11.6-46.2 24.8-67.9 39.3l332.8 498.1c0 0-0.1 0-0.1 0.1L4.4-51.1C-15.3-33.9-33.8-15.3-51.1 4.4l450.4 395c0 0 0 0.1-0.1 0.1L-99 66.6c-14.5 21.7-27.6 44.4-39.3 68l537.4 265c0 0 0 0.1 0 0.1l-567.4-192.6c-8.3 24.6-15.1 49.9-20.2 75.8L399 399.8c0 0 0 0.1 0 0.1l-597.7-39.2c-1.7 26.5-1.7 52.7-0.1 78.5L399 400.1c0 0 0 0.1 0 0.1l-587.6 116.9c5.1 25.9 11.9 51.2 20.3 75.8l567.4-192.6c0 0 0 0.1 0 0.1l-537.3 265c11.6 23.5 24.8 46.2 39.3 67.9l498.1-332.8c0 0 0 0.1 0.1 0.1l-450.4 395c17.3 19.7 35.8 38.2 55.5 55.5l395-450.4c0 0 0.1 0 0.1 0.1L66.6 899c21.7 14.5 44.4 27.6 68 39.3l265-537.4c0 0 0.1 0 0.1 0L207.1 968.3c24.6 8.3 49.9 15.1 75.8 20.2L399.8 401c0 0 0.1 0 0.1 0l-39.2 597.7c26.5 1.7 52.7 1.7 78.5 0.1L400.1 401c0 0 0.1 0 0.1 0l116.9 587.6c25.9-5.1 51.2-11.9 75.8-20.3L400.3 400.9c0 0 0.1 0 0.1 0l265 537.3c23.5-11.6 46.2-24.8 67.9-39.3L400.5 400.8c0 0 0.1 0 0.1-0.1l395 450.4c19.7-17.3 38.2-35.8 55.5-55.5l-450.4-395c0 0 0-0.1 0.1-0.1L899 733.4c14.5-21.7 27.6-44.4 39.3-68l-537.4-265c0 0 0-0.1 0-0.1l567.4 192.6c8.3-24.6 15.1-49.9 20.2-75.8L401 400.2c0 0 0-0.1 0-0.1L998.7 439.2z'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='400' cy='400' r='50%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23EEEEEE'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='400' cy='400' r='70%25' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='800'/%3E%3Cg fill-opacity='.8'%3E%3Cpath fill='url(%23b)' d='M998.7 439.2c1.7-26.5 1.7-52.7 0.1-78.5L401 399.9c0 0 0-0.1 0-0.1l587.6-116.9c-5.1-25.9-11.9-51.2-20.3-75.8L400.9 399.7c0 0 0-0.1 0-0.1l537.3-265c-11.6-23.5-24.8-46.2-39.3-67.9L400.8 399.5c0 0 0-0.1-0.1-0.1l450.4-395c-17.3-19.7-35.8-38.2-55.5-55.5l-395 450.4c0 0-0.1 0-0.1-0.1L733.4-99c-21.7-14.5-44.4-27.6-68-39.3l-265 537.4c0 0-0.1 0-0.1 0l192.6-567.4c-24.6-8.3-49.9-15.1-75.8-20.2L400.2 399c0 0-0.1 0-0.1 0l39.2-597.7c-26.5-1.7-52.7-1.7-78.5-0.1L399.9 399c0 0-0.1 0-0.1 0L282.9-188.6c-25.9 5.1-51.2 11.9-75.8 20.3l192.6 567.4c0 0-0.1 0-0.1 0l-265-537.3c-23.5 11.6-46.2 24.8-67.9 39.3l332.8 498.1c0 0-0.1 0-0.1 0.1L4.4-51.1C-15.3-33.9-33.8-15.3-51.1 4.4l450.4 395c0 0 0 0.1-0.1 0.1L-99 66.6c-14.5 21.7-27.6 44.4-39.3 68l537.4 265c0 0 0 0.1 0 0.1l-567.4-192.6c-8.3 24.6-15.1 49.9-20.2 75.8L399 399.8c0 0 0 0.1 0 0.1l-597.7-39.2c-1.7 26.5-1.7 52.7-0.1 78.5L399 400.1c0 0 0 0.1 0 0.1l-587.6 116.9c5.1 25.9 11.9 51.2 20.3 75.8l567.4-192.6c0 0 0 0.1 0 0.1l-537.3 265c11.6 23.5 24.8 46.2 39.3 67.9l498.1-332.8c0 0 0 0.1 0.1 0.1l-450.4 395c17.3 19.7 35.8 38.2 55.5 55.5l395-450.4c0 0 0.1 0 0.1 0.1L66.6 899c21.7 14.5 44.4 27.6 68 39.3l265-537.4c0 0 0.1 0 0.1 0L207.1 968.3c24.6 8.3 49.9 15.1 75.8 20.2L399.8 401c0 0 0.1 0 0.1 0l-39.2 597.7c26.5 1.7 52.7 1.7 78.5 0.1L400.1 401c0 0 0.1 0 0.1 0l116.9 587.6c25.9-5.1 51.2-11.9 75.8-20.3L400.3 400.9c0 0 0.1 0 0.1 0l265 537.3c23.5-11.6 46.2-24.8 67.9-39.3L400.5 400.8c0 0 0.1 0 0.1-0.1l395 450.4c19.7-17.3 38.2-35.8 55.5-55.5l-450.4-395c0 0 0-0.1 0.1-0.1L899 733.4c14.5-21.7 27.6-44.4 39.3-68l-537.4-265c0 0 0-0.1 0-0.1l567.4 192.6c8.3-24.6 15.1-49.9 20.2-75.8L401 400.2c0 0 0-0.1 0-0.1L998.7 439.2z'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.876);
+  box-shadow: 0 0px 0px 0.5em #171b20;
   border: 2px solid rgba(248, 248, 248, 0.075);
   display: grid;
   grid-template-columns: repeat(9, 1fr);
   place-items: center;
+  animation: imageFloatLeftRight 5s ease-in-out infinite alternate-reverse;
+}
+@keyframes imageFloatLeftRight {
+  from {
+    background-position-x: -10px;
+  }
+  to {
+    background-position-x: 10px;
+  }
+}
+.archon-vs-info-container::after {
+  position: absolute;
+  content: "";
+  width: 1em;
+  height: 1em;
+  background: transparent;
+  left: -1.375em;
+  bottom: 1.45em;
+  border-radius: 0 0 99vh 0;
+  box-shadow: 0.1em 0.55em 0 #171b20;
+}
+.archon-vs-info-container::before {
+  position: absolute;
+  content: "";
+  width: 1em;
+  height: 1em;
+  background: transparent;
+  right: -1.375em;
+  bottom: 1.45em;
+  border-radius: 0 0 0 99vh;
+  box-shadow: -0.1em 0.55em 0 #171b20;
 }
 .archon-vs-info-text {
-  color: #fff;
-  font-weight: 600;
+  color: #000;
+  font-weight: 700;
   font-size: 0.8rem;
 }
 .archon-vs-info-text:nth-child(1) {
@@ -2833,7 +2874,6 @@ h6 {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1em;
 }
 .listing-main-container {
   position: relative;
@@ -2847,10 +2887,11 @@ h6 {
 .each-match-list-container {
   position: relative;
   width: inherit;
-  background: linear-gradient(#323c46, #282f37);
+  /* background: linear-gradient(#323c46, #282f37); */
   border-radius: 0.5em;
   padding: 0.5em;
-  transition: 0.3s all ease;
+  /* transition: 0.3s all cubic-bezier(0.175, 0.885, 0.32, 1.275); */
+  transition: all 0.3s ease-out;
 }
 .each-match-list-top-section {
   position: relative;
@@ -2902,7 +2943,7 @@ h6 {
   width: 100%;
   place-items: center;
   transition: 0.3s all ease;
-    border-top: 1px solid #9c9da131;
+  border-top: 1px solid #9c9da131;
 }
 .trio-container {
   position: relative;
@@ -3018,12 +3059,251 @@ h6 {
 .live-score-container {
   position: relative;
   width: 100%;
-  background: black;
   border-radius: 0.5em;
   display: flex;
   gap: 0.5em;
-  padding: 1em;
 }
 .live-score-button-icon {
   padding: 1em;
+}
+.content-box-with-main-title {
+  position: relative;
+  width: 100%;
+  padding: 0.5em;
+}
+.content-box-main-title {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+.content-box-with-data {
+  position: relative;
+  width: 100%;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 0.8rem;
+  padding: 1em 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.content-sub-box-with-data {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.content-sub-main-data {
+  color: rgba(255, 255, 255, 0.4);
+  font-weight: 600;
+}
+.live-counter-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #fff;
+  background: linear-gradient(rgb(231, 231, 231), white, rgb(231, 231, 231));
+  border-radius: 99vh;
+  width: 3.5em;
+  align-items: center;
+  font-weight: 700;
+  overflow: hidden;
+}
+.live-counter-buttons {
+  border: none;
+  background: none;
+  font-size: 1.2rem;
+  width: 3em;
+  height: 100%;
+  transition: 0.3s all ease;
+}
+.live-counter-buttons-top {
+  padding: 0.5em 0 1em 0;
+}
+.live-counter-buttons-top:active {
+  background: linear-gradient(rgb(205, 205, 205), transparent);
+  padding: 0.1em 0 1em 0;
+}
+.live-counter-buttons-bottom {
+  padding: 1em 0 0.5em 0;
+}
+.live-counter-buttons-bottom:active {
+  background: linear-gradient(transparent, rgb(205, 205, 205));
+  padding: 1em 0 0.1em 0;
+}
+.live-counter-main-container {
+  position: relative;
+  padding: 0.5em 0 2em 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.recent-live-events {
+  position: relative;
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
+  gap: 0.5em;
+  padding: 0 0 1em 0;
+}
+.recent-live-event-container {
+  position: relative;
+  background: rgb(40, 40, 40);
+  border-top: 1px solid rgba(255, 255, 255, 0.08);
+  border-radius: 99vh;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  padding: 1em;
+  gap: 1em;
+  min-width: 10em;
+}
+.recent-live-event-container::before {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 100%;
+  transform: skew(45deg);
+  background: linear-gradient(
+    transparent,
+    rgba(255, 255, 255, 0.111),
+    transparent
+  );
+  left: 0;
+  top: 0;
+  opacity: 0;
+  animation: recent-live-glassy 5s ease infinite;
+}
+@keyframes recent-live-glassy {
+  0% {
+    left: 0;
+    opacity: 0;
+  }
+  19% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 1;
+  }
+  51% {
+    opacity: 0;
+  }
+  100% {
+    left: 100%;
+    opacity: 0;
+  }
+}
+.recent-live-data {
+  color: #fff;
+  display: grid;
+  font-size: 0.8rem;
+  place-items: center;
+  font-weight: 600;
+}
+.recent-live-data:nth-child(1) {
+  grid-area: 1 / 1 / 2 / 3;
+}
+.recent-live-data:nth-child(2) {
+  grid-area: 1 / 3 / 2 / 4;
+  color: rgba(255, 255, 255, 0.422);
+  font-weight: 500;
+}
+.recent-live-data:nth-child(3) {
+  grid-area: 1 / 4 / 2 / 6;
+}
+.each-match-list-container-active {
+  border: 2px solid rgba(112, 112, 112, 0.363);
+  background: #2b323b;
+}
+.live-container-live-text {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 10;
+  background: rgb(237, 50, 50);
+  padding: 0.2em 1.2em;
+  font-size: 0.8rem;
+  border-radius: 0.25em;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  color: #fff;
+}
+.content-sub-box-check-container {
+  position: relative;
+  display: flex;
+}
+.content-sub-box-check-button {
+  border: none;
+  font-size: 0.6rem;
+  padding: 0.2em 0.8em;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.362);
+  background: rgba(52, 52, 52, 0.411);
+  text-transform: uppercase;
+}
+.content-sub-box-check-button:hover {
+  background: #0e8ae7;
+  color: #fff;
+}
+.content-sub-box-check-button:last-child {
+  border-radius: 0 99vh 99vh 0;
+}
+.content-sub-box-check-button:first-child {
+  border-radius: 99vh 0 0 99vh;
+}
+.archon-vs-info-timer-container {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(105%);
+  padding: 0.3em 1.5em;
+  font-size: 0.8rem;
+  background: rgb(214, 214, 214);
+  box-shadow: 0 5px 3px rgba(0, 0, 0, 0.184) inset;
+  z-index: -1;
+  display: grid;
+  place-items: center;
+  font-weight: 600;
+  border-radius: 0 0 0.5em 0.5em;
+}
+.recent-live-event-time-container {
+  position: absolute;
+  top: -2px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.3em 1em;
+  font-size: 0.6rem;
+  background: #171B20;
+  display: grid;
+  place-items: center;
+  font-weight: 600;
+  color: #fff;
+  border-radius: 0 0 1vh 1vh;
+  border: 1px solid #171B20;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.08);
+}
+.recent-live-event-time-container::before {
+  position: absolute;
+  content: '';
+  width: 0.5em;
+  height: 0.5em;
+  background: transparent;
+  top: 0;
+  left: -0.6em;
+  border-radius: 0 99vh 0 0;
+  box-shadow: 1px -0.2em 0 #171B20;
+}
+.recent-live-event-time-container::after {
+  position: absolute;
+  content: '';
+  width: 0.5em;
+  height: 0.5em;
+  background: transparent;
+  top: 0;
+  right: -0.6em;
+  border-radius: 99vh 0 0 0;
+  box-shadow: -1px -0.2em 0 #171B20;
 }
